fix: progress bar spacing not being consistent between groups, closes #10

--- a/public/achievements.scss
+++ b/public/achievements.scss
@@ -209,7 +209,7 @@ $tooltip-background: #16202d;
   }
 
   .progress-container {
-    @include flex-between;
+    align-items: center;
     gap: 10px;
 
     & >:last-child {
